--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,1 +1,30 @@
-<p>Footer</p>
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+  <div class="box nav">
+
+    <ul class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+      <li class="upper">DEVV</li>
+      <li>What is like?</li>
+      <li>Contact us</li>
+    </ul>
+
+    <ul class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+      <li class="upper">Consulting</li>
+      <li>Services</li>
+      <li>Career</li>
+      <li>Work for us</li>
+    </ul>
+
+    <ul class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+      <li class="upper">Search</li>
+      <li>Headhunting</li>
+      <li>Relocation package for developers</li>
+    </ul>
+
+    <ul class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+      <li class="upper">Network</li>
+      <li>Partners</li>
+      <li>Devv Family</li>
+    </ul>
+
+  </div>
+</div>
