--- a/partials/header.html
+++ b/partials/header.html
@@ -1,1 +1,4 @@
-<p>Header</p>
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+  <div class="box bg-color"></div>
+  <img src="../images/logo.png" class="logo">
+</div>
