--- a/views/search/search.html
+++ b/views/search/search.html
@@ -1,3 +1,12 @@
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-  <div class="box">Search</div>
+  <div class="box">
+    <input type="text" ng-model="searchCtrl.searchInput"/>
+
+    <ul>
+      <li ng-repeat="result in (searchCtrl.searchData | filterSearch:searchCtrl.searchInput) track by $index"
+          ng-if="searchCtrl.searchInput.length">
+        {{result}}
+      </li>
+    </ul>
+  </div>
 </div>
